# VERA

./: .gitignore  README.md  SETUP.md  TRAINING.md  pyproject.toml
examples/: mimicgen_stack.ipynb  pusht_dfot_stack.ipynb  run_idm_on_video.py
vera/configurations/: config_wan_combined_5env.yaml
vera/configurations/dataset/: combined_5env.yaml
vera/controller/: nora_camera_reader.py
vera/datasets/: registry.py
vera/env_runner/: mimicgen_runner.py  pusht_runner.py
vera/env_runner/env_wrappers/: mimicgen_table_texture.py  pusht_env.py
vera/experiments/: video_generation.py
vera/idm/common/metrics/video/: lpips.py  shared_registry.py
vera/policy/world_models/: megaflow_inference.py
vera/server/: start_server_allegro.py  start_server_mimicgen.py  start_server_pusht.py  start_vera_server.py
vera/server/protocol/: adapter_factory.py  websocket_policy_client.py  websocket_policy_server.py
vera/utils/: wandb.py  wandb_utils.py
vera/video_model/algorithms/wan/: wan_t2v.py
